# renderer

./: CMakeLists.txt
app/: AppSettings.cpp  AppSettings.h  CMakeLists.txt  GeneralSettings.qml  GlSettings.qml  Main.qml  RenderingContext.cpp  RenderingContext.h  StatsWindow.qml  TerrainRenderer.cpp  TerrainRendererItem.cpp  TerrainRendererItem.h
app/vectorlayerstyles/: basemap.json  info.txt  openstreetmap.json  osm-bright.json  qwant.json
gl_engine/: CMakeLists.txt  Context.cpp  Context.h  Texture.cpp  Texture.h  TextureLayer.cpp  TextureLayer.h  UniformBufferObjects.h  VectorLayer.cpp  VectorLayer.h  Window.cpp  Window.h
gl_engine/shaders/: camera_config.glsl  compose.frag  tile.frag  tile.glsl  tile.vert  tile_id.glsl  vector_layer.frag  vector_layer.glsl  vector_layer.vert  vector_layer_fallback.frag  vector_layer_fallback.vert
nucleus/: CMakeLists.txt  Raster.h  srs.cpp  srs.h
nucleus/camera/: PositionStorage.h
nucleus/tile/: DrawListGenerator.cpp  GpuArrayHelper.cpp  GpuArrayHelper.h  Scheduler.cpp  Scheduler.h  conversion.h  types.h  utils.h
nucleus/utils/: Benchmark.cpp  Benchmark.h  UrlModifier.h  bit_coding.h  rasterizer.cpp  rasterizer.h
nucleus/vector_layer/: GpuMultiArrayHelper.cpp  GpuMultiArrayHelper.h  Preprocessor.cpp  Preprocessor.h  Scheduler.cpp  Scheduler.h  Style.cpp  Style.h  StyleExpander.cpp  StyleExpander.h  StyleExpression.cpp  StyleExpression.h  StyleFilter.cpp  StyleFilter.h  clipper1.h  clipper2.h  constants.h  setup.h
nucleus/vector_tile/: types.h  util.h
plain_renderer/: main.cpp
unittests/gl_engine/: CMakeLists.txt  texture.cpp  tile_drawing.cpp  tile_funs.cpp
unittests/gl_engine/data/: vectortile_mountain_14_8781_5760.pbf  vectortile_openmaptile_18_140276_92195_kals.pbf  vectortile_skilift_18_140269_92190.pbf
unittests/nucleus/: CMakeLists.txt  DrawListGenerator.cpp  gpu_array_helper.cpp  rasterizer.cpp  srs.cpp  tile_util.cpp  vector_preprocess.cpp  vector_style.cpp  vector_tile.cpp
unittests/nucleus/data/: vectortile_13_4412_2893.pbf
unittests/nucleus/data/vector_layer/: test-style-merge.json  test-style.json  (+4 more)
